--- a/oldal/login.html
+++ b/oldal/login.html
@@ -39,7 +39,7 @@
     </div>
     <div class="torzs">
         <div class="be">
-            <form action="login.php" method="POST">
+            <form action="login.php" method="POST" autocomplete="off">
                 <fieldset>
                     <legend>Bejelentkezés</legend></br>
                     <input type="text" name="nev" placeholder="Nick név" required minlength="5"><br>
@@ -48,7 +48,7 @@
                 </fieldset>
             </form>
             <h3>Ha nincs fiókja regisztráljon!</h3>
-            <form action="reg.php" method="POST">
+            <form action="reg.php" method="POST" autocomplete="off">
                 <fieldset>
                     <legend>Regisztráció</legend></br>
                     <input type="text" name="vezetek" placeholder="Vezetéknév" required><br>
